[gd_scene load_steps=7 format=3 uid="uid://dgg0qggy2pu7o"]

[ext_resource type="Texture2D" uid="uid://cyel4b2a3tbwc" path="res://art/resource.png" id="1_fpclo"]
[ext_resource type="Script" path="res://crystal.gd" id="1_txber"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qwo5b"]
size = Vector2(26, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_v5yx7"]
radius = 22.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1olry"]
bg_color = Color(0.286275, 0.34902, 0.376471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5s6e2"]
bg_color = Color(0.937255, 0.615686, 0.517647, 1)

[node name="crystal" type="StaticBody2D"]
script = ExtResource("1_txber")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qwo5b")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_v5yx7")

[node name="bar" type="ProgressBar" parent="."]
offset_left = -23.0
offset_top = -28.0
offset_right = 23.0
offset_bottom = -20.0
theme_override_styles/background = SubResource("StyleBoxFlat_1olry")
theme_override_styles/fill = SubResource("StyleBoxFlat_5s6e2")
max_value = 10.0
value = 10.0
show_percentage = false

[node name="timer" type="Timer" parent="."]

[node name="Resource" type="Sprite2D" parent="."]
position = Vector2(0, -3)
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_fpclo")

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
